2006-04-09  Daniel Stone  <daniel@freedesktop.org>

	* Xi/exevents.c:
	Coverity #323, #445, #446, #447: Fix potential NULL dereferences.

	* xkb/ddxList.c:
	Coverity #169: Fix potential fgets() into NULL (?!?).

	* xkb/XKBMAlloc.c:
	Coverity #324: Fix potential NULL dereference.  (Alan Coopersmith)

	* xkb/xkb.c:
	Coverity #340: Fix potential NULL dereference.
	Clean up proliferation of 'register int n' in loops of ProcXkbGetNames.

2006-04-07  Aaron Plattner  <aplattner@nvidia.com>

	* hw/xfree86/common/xf86Module.h:
	Bump the ABI versions.  Due to Glyph privates and the XV update below,
	the video driver ABI needs to be bumped to 1.0.  The rest of the ABI
	minor versions were bumped to include the LoaderGetABIVersion
	function.
	* hw/xfree86/common/xf86xv.c: (xf86XVRegetVideo),
	(xf86XVReputVideo), (xf86XVReputImage), (xf86XVPutStill),
	(xf86XVGetStill), (xf86XVPutImage):
	* hw/xfree86/common/xf86xv.h:
	Add a DrawblePtr argument to the XV hooks.  This allows drivers to
	determine that the target window is redirected and draw to the
	appropriate place.

Fri Apr  7 13:46:45 2006  Søren Sandmann  <sandmann@redhat.com>

	* composite/compext.c (ProcCompositeReleaseOverlayWindow): Use
	FreeResource instead of deleteCompOverlayClient()

2006-04-07  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xisb.c:
	* hw/xfree86/common/xisb.h:
	Remove libc wrapper types from Xisb interfaces.

2006-04-07  Daniel Stone  <daniel@freedesktop.org>

	* hw/xfree86/utils/xorgcfg/keyboard-cfg.c:
	Coverity #1216: Fix double-close of file on error.

	* xkb/xkbEvents.c:
	Coverity #987: Avoid potential NULL dereference.

	* xkb/xkb.c:
	Coverity #844, #845, #846: Fix memory leaks.

	* xkb/XKBMisc.c:
	Coverity #826: Fix potential memory leak.

2006-04-06  Keith Packard  <keithp@keithp.com>

	* fb/fbstipple.c: (fbEvenStipple):
	Coverity #333, #334 - eliminate unncessary test
	for always true condition in fbEvenStipple.

2006-04-06  Adam Jackson  <ajax@freedesktop.org>
